<resources>
    <string name="app_name">BestBefore</string>

    <string name="hint_food">Food…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Food not saved because it is empty.</string>
    <string name="pick_date">Best Before Date</string>
    <string name="quantity">quantity</string>
    <string name="sharp_sign">#</string>
    <string name="default_quantity_one">1</string>
    <string name="clear_all_data">clear all data</string>
    <string name="clear_data_toast_text">Clearing the data...</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>